fix text align and load the right slide when editing a block in the editor

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -79,20 +79,24 @@ slideshow-component .slideshow.banner {
 
   .slideshow__text.slideshow__text-mobile--left {
     align-items: flex-start;
+    text-align: left;
   }
 
   .slideshow__text.slideshow__text-mobile--right {
     align-items: flex-end;
+    text-align: right;
   }
 }
 
 @media screen and (min-width: 750px) {
   .slideshow__text.slideshow__text--left {
     align-items: flex-start;
+    text-align: left;
   }
 
   .slideshow__text.slideshow__text--right {
     align-items: flex-end;
+    text-align: right;
   }
 }
 
